# SafeStream-Redactor

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  generate_dataset.py  generate_hard_dataset.py  run_benchmark.py
docs/: good_first_issues.md
src/safestream_redactor/: __init__.py  __main__.py  cli.py  config.py  engine.py  entities.py  netguard.py  policy.py  redactor.py  scheduler.py
src/safestream_redactor/detectors/: __init__.py  base.py  contextual.py  custom.py  deterministic.py  entropy.py  ner.py  registry.py
tests/: test_cli.py  test_config.py  test_detectors.py  test_memory.py  test_netguard.py  test_redaction.py  test_registry.py  test_scheduler.py  test_streaming.py
