[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safestream-redactor"
dynamic = ["version"]
description = "Streaming PII & credential detection/redaction for very large text files with constant memory usage."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mounish Senisetty", email = "senisettymounish@gmail.com" }]
requires-python = ">=3.10"
keywords = ["pii", "redaction", "privacy", "security", "streaming", "secrets", "dlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Text Processing :: Filters",
  "Typing :: Typed",
]
dependencies = [
  # tomllib is stdlib from 3.11; tomli is the identical backport for 3.10
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ner = ["spacy>=3.5"]
dev = ["pytest>=7.0", "ruff>=0.4"]
bench = ["presidio-analyzer>=2.2"]

[project.urls]
Homepage = "https://github.com/MounishSenisetty/SafeStream-Redactor"
Issues = "https://github.com/MounishSenisetty/SafeStream-Redactor/issues"

[project.scripts]
safestream = "safestream_redactor.cli:main"

[tool.hatch.version]
path = "src/safestream_redactor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/safestream_redactor"]

[tool.pytest.ini_options]
addopts = "-m 'not memory'"
markers = [
  "memory: long-running constant-memory tests on large generated files (run with: pytest -m memory -o addopts='')",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "SIM108", # ternary is not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
